--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,18 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Стеклопакеты используемые в компании Атик" />
+  <meta name="description" content="Стеклопакеты, используемые в компании Атик" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
+  <style type="text/css" media="print">
+    @page {
+      /* size: landscape */
+      /* size: "100mm 100mm"; */
+      /* height: 100%; */
+      break-inside: auto !important;
+      break-after: auto !important;
+      break-before: auto !important;
+    }
+  </style>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
