--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Стеклопакеты, используемые в компании Атик" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <style type="text/css" media="print">
+  <!-- <style type="text/css" media="print">
     @page {
       /* size: landscape */
       /* size: "100mm 100mm"; */
@@ -17,7 +17,7 @@
       break-after: auto !important;
       break-before: auto !important;
     }
-  </style>
+  </style> -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
